fixed mobile view with overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,9 +12,6 @@
 @import './components/Project//project';
 @import './components/Footer/footer';
 
-.App {
-  overflow-y: hidden;
-}
 
 .relative-section {
   width: 100%;
