--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -23,5 +23,6 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 1.25rem;
+    overflow: hidden;
   }
 }
